# enum-extract

./: Cargo.toml  LICENSE-MIT  README.md  copyright.txt
.devcontainer/: Dockerfile  devcontainer.json
crates/enum-extract/: Cargo.toml
crates/enum-extract-error/: Cargo.toml
crates/enum-extract-error/src/: lib.rs
crates/enum-extract-error/tests/: value_error_tests.rs
crates/enum-extract-macro/: Cargo.toml
crates/enum-extract-macro/src/: lib.rs  named_enum_functions.rs  unit_enum_functions.rs  unnamed_enum_functions.rs
crates/enum-extract-macro/tests/: basic_tests.rs  generic_enum_tests.rs  lifetime_enum_tests.rs  named_variant_tests.rs  snake_case_variant_tests.rs  unit_variant_tests.rs  unnamed_variant_tests.rs
crates/enum-extract/src/: function_def.rs  lib.rs  named_enum_functions.rs
crates/enum-extract/tests/: basic_tests.rs  generic_enum_tests.rs  lifetime_enum_tests.rs  named_variant_tests.rs  snake_case_variant_tests.rs  unit_variant_tests.rs  unnamed_variant_tests.rs
